2011-12-06 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/request.xml,doc/xml/install.xml: documenting new configure switches

2011-12-05 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: child init sets also the array module_conf to signal the
    compilation flags --enable-rivet-commands-export and --enable-import-namespace-commands
    for the benefit of init.tcl
    * configure.ac: new macro created to handle --enable-rivet-commands-export and 
    --enable-import-namespace-commands
    * rivet/init.tcl: module_conf signals when commands have to be exported from ::rivet
    and when they have to be implicitly imported into the global namespace for compatibility
    with previous versions of Rivet.

2011-11-21 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/directives.xml,doc/xml/commands.xml: removed note about 'rivetlib' package
    no more needed. Notes about ServerInitScript not having effect when virtual hosts
    have their own private slave interpreters.

2011-11-20 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml,doc/xml/install.xml: documentation for building Rivet updated.
    * configure.ac: corrected help message for --disable-rivet-commands-export

2011-11-20 Massimo Manghi <mxmanghi@apache.org>
    * src/rivet.h: Macro definition for Rivet command objects has rolled back to 
    its previous form and doesn't call Tcl_Export anymore. In case commands are
    exported by calling Tcl_Export in rivetCore.c and rivetPkgInit.c
    * tests/*: test suite reviewed for new tests

2011-11-16 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/rivetCore.c: code rationalization. namespace reference will not be
    passed to the RIVET_OBJ_COMMAND macro and commands are exported by calling Tcl_Export
    on the whole command set in ::rivet. The whole process is controlled by the macro
    symbol RIVET_NAMESPACE_EXPORT 
    * src/rivet.h: only one RIVET_OBJ_COMMAND object exists now. Call to Rivet_WWWInit,